fix shortcut cutoff issue

--- a/styles.css
+++ b/styles.css
@@ -133,8 +133,8 @@
 
 	.callout .container {
 		height: auto;
-		padding-bottom: 12em;
-		margin-bottom: 0;
+		padding-bottom: 13em;
+		margin-bottom: 2em;
 	}
 
 	.callout h1 {
